# resume

./: .gitignore  .typos.toml  README.md  TODO.md  docker-compose.yaml  eslint.config.js  package.json  pnpm-lock.yaml  svelte.config.js  uno.config.ts  vite.config.ts
data/: .gitignore
messages/: en-US.json  en.json  zh-CN.json  zh-cn.json
migrations/: employments.sql  fields.sql  fields_employments.sql  fields_projects.sql  projects.sql
project.inlang/: settings.json
resume-representor/: .dockerignore  .gitignore  Dockerfile  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.ts
resume-representor/messages/: en.json  zh-cn.json
resume-representor/project.inlang/: project_id
resume-representor/src/: app.d.ts  hooks.server.ts
resume-representor/src/lib/components/: EmploymentCard.svelte  (+2 more)
resume-representor/src/routes/: +page.server.ts  +page.svelte  +page.ts
resume-transporter/: .gitignore  Dockerfile  README.md  db.exampl.yaml  migration.py  pyproject.toml
resume-transporter/resume_transporter/: main.py  models.py
resume-transporter/resume_transporter/routers/: bio.py  employments.py  fields.py  projects.py  resume.py
src/: app.css  app.d.ts  app.html  hooks.server.ts
src/lib/: index.ts
src/lib/components/: Card.svelte  Content.svelte  EmploymentCard.svelte  ProjectCard.svelte  Title.svelte  style.css
src/lib/server/: index.ts  util.ts
src/routes/: +page.server.ts  +page.svelte
src/routes/[field]/: +page.server.ts  +page.svelte  EmploymentCard.svelte  MainContent.svelte  ProjectCard.svelte  SideBar.svelte  Summary.svelte
(+6 files in other folders)
