[project]
name = "resume-transporter"
version = "1.1.2"
description = "A FastAPI back end with Tortoise ORM to fetch resume data"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "pyyaml>=6.0.2",
    "tortoise-orm[asyncpg]>=0.24.2",
]

[dependency-groups]
dev = [
    "pgadmin4>=9.2",
    "ruff>=0.11.5",
]
deploy = [
    "uvicorn>=0.34.0",
]
